[metadata]
name = django-coasc
version = 0.5
description = A Django app for building double entry accounting systems.
long_description = file: README.rst
url = https://github.com/suresh466/django-cosac/
author = Suresh Thagunna
author_email = suresh.thagunna77@gmail.com
# license = BSD-3-Clause  # Example license
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 4.0  # Replace "X.Y" as appropriate
    Intended Audience :: Developers
    # License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Book Keeping

[options]
include_package_data = true
packages = find:
python_requires = >=3.8
install_requires =
    Django >= 4.0  # Replace "X.Y" as appropriate
